--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/(with-banner)/posts/[id]/page.jsx", "src/app/(with-banner)/posts/page.jsx", "src/app/(with-banner)/posts/[id]/ShowComments.jsx"],
   "exclude": ["node_modules"]
 }
